rust/llm-wire-openai/src/snapshots/llm_wire_openai__chat__tests__chat_stream_text_only.snap
---
source: llm-wire-openai/src/chat.rs
expression: "run_fixture(\"text_only\")"
---
[
  {
    "type": "text_delta",
    "text": "Cargo is"
  },
  {
    "type": "text_delta",
    "text": " the build system."
  },
  {
    "type": "stop",
    "stop": {
      "type": "end_turn"
    }
  },
  {
    "type": "usage",
    "usage": {
      "input_tokens": 12,
      "output_tokens": 34,
      "cache_read_tokens": 5,
      "cache_write_tokens": 0,
      "estimated": false,
      "cost_usd": 0.0,
      "latency_ms": 0
    }
  }
]
